# BarBitch

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: python-app.yml
app/: .dockerignore  Dockerfile  alembic.ini  cli.py  main.py  requirements.txt
app/api/: clients.py  items.py  new_routes.py  orders.py  router.py  routes_v1.py  schemas.py
app/core/: config.py  database.py
app/migrations/: env.py
app/migrations/versions/: 2025_10_23_1453-03920600efa1_initial_migration.py  2025_12_07_2202-1bdceb555988_add_basic_models.py  2025_12_07_2209-2551e9db7486_summary_of_changes_2.py  2026_01_17_0214-1c1b685c86e1_base.py  2026_01_17_0215-c10064056806_add_total_to_order.py  2026_01_18_0904-3a4166d2760c_1.py  (+8 more)
app/models/: __init__.py  client.py  item.py  models.py  order.py  order_item.py
app/schemas/: schemas_order.py
app/services/: auth_service.py  order_service.py  receipt_service.py  table_service.py
app/tests/: conftest.py  test_auth.py  test_client.py  test_coverage.py  test_happy_paths.py  test_item.py  test_order.py  test_placeholder.py  test_stats.py  test_stock.py  test_updates.py  test_v1.py
client/: Dockerfile  api.py  app.py  index.html  package.json  vite.config.js
client/src/: App.jsx  currency.js  index.css  main.jsx
client_legacy/: Dockerfile
docs/: SECURITY_AUDIT.md  architecture.md  development.md  frontend_design.md  frontend_i18n.md  manual_testing.md  roadmap.md  test-results.md  user_management.md
frontend/: front.py
nginx/: nginx.conf
(+19 files in other folders)
