[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BarPOS"
version = "0.1.0"
description = "FastAPI project"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlmodel",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_paths = ["."] 